// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows custom classes 1`] = `
.c0 {
  background-color: transparent;
  font-size: 1.0714285714285714rem;
  padding-right: 1.7142857142857142rem;
  padding-left: 1.7142857142857142rem;
  min-width: 0;
  padding: 0.5714285714285714rem 1rem;
  border-radius: 1.1428571428571428rem;
  border-width: 0.07142857142857142rem;
  white-space: normal;
  line-height: 1.3;
}

<div>
  <button
    class="blah c0"
    data-testid="pill-button"
  >
    custom class
  </button>
</div>
`;

exports[`renders the expected classes 1`] = `
.c0 {
  background-color: transparent;
  font-size: 1.0714285714285714rem;
  padding-right: 1.7142857142857142rem;
  padding-left: 1.7142857142857142rem;
  min-width: 0;
  padding: 0.5714285714285714rem 1rem;
  border-radius: 1.1428571428571428rem;
  border-width: 0.07142857142857142rem;
  white-space: normal;
  line-height: 1.3;
}

<div>
  <button
    class="c0"
    data-testid="pill-button"
  >
    hello world
  </button>
</div>
`;
